tests/ui/higher-ranked/trait-bounds/normalize-under-binder/issue-62529-3.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-62529-3.rs:25:9
   |
LL |         call(f, ());
   |         ^^^^ cannot infer type of the type parameter `T` declared on the function `call`
   |
   = note: cannot satisfy `for<'a> _: ATC<'a>`
   = help: the trait `ATC<'a>` is implemented for `()`
note: required by a bound in `call`
  --> $DIR/issue-62529-3.rs:9:16
   |
LL | fn call<'b, T: for<'a> ATC<'a>, F: for<'a> Fn(<T as ATC<'a>>::Type)>(
   |                ^^^^^^^^^^^^^^^ required by this bound in `call`
help: consider specifying the generic arguments
   |
LL |         call::<T, F>(f, ());
   |             ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
